# palimp

./: Cargo.toml  LICENSE.md  README.md
palimp-cli/: Cargo.toml
palimp-cli/src/: main.rs
palimp-core/: Cargo.toml
palimp-core/src/: database.rs  lib.rs  page.rs  page_archive.rs  query.rs  result_entry.rs  sitemap.rs
palimp-core/tests/: application_tests.rs
palimp-gui/: Cargo.toml
palimp-gui/src/: main.rs
palimp-gui/ui/: appwindow.slint
palimp-gui/ui/components/: add-crawl-dialog.slint  add-query-dialog.slint  add-site-dialog.slint  crawl-card.slint  crawls-grid-view.slint  crawls-panel.slint  query-results-panel.slint  query-view.slint  sidebar-nav.slint  sites-sidebar.slint
palimp-gui/ui/pages/: crawls-page.slint  queries-page.slint  results-page.slint  site-detail-page.slint  sites-page.slint
src/: crawl.rs  database.rs  http_client.rs  main.rs  page.rs  page_archive.rs  result_entry.rs  site.rs
